--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2018"
 description = "A basic music theory and synthesis library."
 readme = "README.md"
 repository = "https://github.com/zfdavis/tonic"
-license = "MIT OR Apache-2.0"
+license = "MIT"
 keywords = ["music", "synth"]
 categories = ["multimedia::audio"]
 
