--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
-name = "tonic"
+name = "tonal"
 version = "0.1.0"
 authors = ["zfdavis <zfdavis21@gmail.com>"]
 edition = "2018"
 description = "A basic music theory and synthesis library."
 readme = "README.md"
-repository = "https://github.com/zfdavis/tonic"
+repository = "https://github.com/zfdavis/tonal"
 license = "MIT"
 keywords = ["music", "synth"]
 categories = ["multimedia::audio"]
